--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,11 @@
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.title}">怎么学会快速使用spring boot开发</h4>
                     <span th:text="${question.description}"></span><br>
-                    <span class="text-desc"><span th:text="${question.commentCount}"></span> 个回复 • <span th:text="${question.viewCount}"></span> 次浏览 • <span th:text="${#dates.format(question.gmtCreate, 'dd/MMM/yyyy')}"></span></span>
+                    <span class="text-desc">
+                        <span th:text="${question.commentCount}"></span> 个回复 •
+                        <span th:text="${question.viewCount}"></span> 次浏览 •
+                        <span th:text="${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
+                    </span>
                 </div>
             </div>
 
