--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -1,27 +1,46 @@
-.body{
+.body {
     background-color: #efefef;
 }
-.main{
+
+.main {
     background-color: white;
     margin: 30px;
 }
-.btn-publish{
+
+.btn-publish {
     float: right;
     margin-bottom: 15px;
 }
-.media-object{
+
+.media-object {
     width: 40px;
     height: 40px;
 }
-.text-desc{
+
+.media-body {
+    padding-top: 11px;
+}
+
+.text-desc {
     font-size: 12px;
     font-weight: normal;
     color: #999;
 }
-.profile .section{
+
+.profile .section {
     margin-top: 15px;
 }
-.community-menu{
+
+.community-menu {
     color: #999;
     font-size: 13px;
+}
+
+.comment {
+    margin: 10px 0px;
+}
+
+.btn-comment {
+    float: right;
+    margin-bottom: 10px;
 }
