--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -7,9 +7,17 @@
     margin: 30px;
 }
 
+.row {
+    margin-top: 10px;
+}
+
 .btn-publish {
     float: right;
     margin-bottom: 15px;
+}
+
+.media-section {
+    padding-top: 10px;
 }
 
 .media-object {
@@ -43,4 +51,29 @@
 .btn-comment {
     float: right;
     margin-bottom: 10px;
+}
+
+.comments {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+}
+
+.comment-sp {
+    margin: 0px;
+}
+
+.menu {
+    color: #999;
+    margin-top: 5px;
+}
+
+.menu .icon {
+    font-size: 15px;
+    margin-right: 6px;
+    cursor: pointer;
+}
+
+.menu .icon:hover {
+    color: #499ef3;
 }
