--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -39,6 +39,29 @@
     margin-top: 15px;
 }
 
+.question-tag {
+    margin-right: 5px;
+}
+
+.question-related {
+    font-size: 12px;
+    line-height: 20px;
+    padding-left: 0;
+    list-style: none;
+}
+
+.question-wechat {
+    width: 100%;
+}
+.publish-tag-tab{
+    display: none;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+.publish-tag-tab .label-info{
+    margin-right: 10px;
+}
+
 .community-menu {
     color: #999;
     font-size: 13px;
@@ -59,6 +82,18 @@
     margin-bottom: 15px;
 }
 
+.sub-comment {
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #eee;
+    padding-top: 10px;
+}
+
+.sub-comment .btn {
+    margin: 10px 0;
+}
+
 .comment-sp {
     margin: 0px;
 }
@@ -72,6 +107,10 @@
     font-size: 15px;
     margin-right: 6px;
     cursor: pointer;
+}
+
+.menu .active {
+    color: #499ef3;
 }
 
 .menu .icon:hover {
