update tag display

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -59,7 +59,9 @@
     padding-top: 10px;
 }
 .publish-tag-tab .label-info{
-    margin-right: 10px;
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-block;
 }
 
 .community-menu {
